#171 Fix knowledge base spacing

--- a/src/scss/_components/_kb.scss
+++ b/src/scss/_components/_kb.scss
@@ -69,7 +69,7 @@ div.docs table {
 
 div.docs h2, h3 {
   padding-top: 80px;
-  margin-top: -80px;
+  margin-top: -40px;
 }
 
 .sticky-in-parent {
